--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>hello world!</title>
+	<style type="text/css">
+		body{
+			background-color:red;
+		}
+		#myelement{
+			position:absolute;
+			left:50px;
+			top:150px;
+		}
+	</style>
 </head>
 <body>
 <p>hello world!!!!!!</p>
-<script>alert("hwllo!")</script>
+<div id="myelement">This is my element</div>
+<script></script>
 </body>
 </html>
