--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
 <p>hello world!!!!!!</p>
 <div id="myelement">This is my element</div>
-<script></script>
+<script>
+	var height = "avout 5'10\" tall";
+	alert(height);
+</script>
 </body>
 </html>
