--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>hello world!</title>
 	<style type="text/css">
 		body{
-			background-color:red;
+			background-color:white;
 		}
 		#myelement{
 			position:absolute;
@@ -14,12 +14,16 @@
 		}
 	</style>
 </head>
-<body>
+<body>       
+
 <p>hello world!!!!!!</p>
 <div id="myelement">This is my element</div>
 <script>
-	var height = "avout 5'10\" tall";
-	alert(height);
+	var beatles = ["John","Paul","George","Ringo"]
+	for(var count=0；count < beatles.length;count++)
+	{
+		alert(beatles[count]);
+	}
 </script>
 </body>
 </html>
