--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>hello world!!!!!!</p>
 <div id="myelement">This is my element</div>
 <script>
-	var beatles = ["John","Paul","George","Ringo"]
+	var beatles = ["John","Paul","George","Ringo"];
 	for(var count=0；count < beatles.length;count++)
 	{
 		alert(beatles[count]);
