--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	var beatles = Array("John","Paul","George","Ringo");
 	for(var count=0；count < beatles.length;count++)
 	{
-		alert(beatles[count]);
+		document.write(beatles[count]);
 	}
 </script>
 </body>
