--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <p>hello world!!!!!!</p>
 <div id="myelement">This is my element</div>
 <script>
+	alert("hello");
 	var beatles = Array("John","Paul","George","Ringo");
 	for(var count=0；count < beatles.length;count++)
 	{
