--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>       
 
-<p>hello world!!!!!!/n hello</p>
+<p>hello world!!!!!!\n hello</p>
 <div id="myelement">This is my element</div>
 <script>
 	alert("hello");
