--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta charset=utf-8" />
 	<title>hello world!</title>
 	<style type="text/css">
 		body{
@@ -15,16 +15,15 @@
 	</style>
 </head>
 <body>       
-
-<p>hello world!!!!!!\n hello</p>
-<div id="myelement">This is my element</div>
-<script>
-	alert("hello");
-	var beatles = Array("John","Paul","George","Ringo");
-	for(var count=0；count < beatles.length;count++)
-	{
-		document.write(beatles[count]);
-	}
-</script>
+<h1>Snapshots</h1>
+<ul>
+<li><a href="images/one.jpg" onclick="showPic(this); return false;" title="A one">One</a></li>
+<li><a href="images/two.jpg" onclick="showPic(this); return false;" title="B two">Two</a></li>
+<li><a href="images/three.jpg" onclick="showPic(this); return false;" title="C three">Three</a></li>
+<li><a href="images/fore.jpg" onclick="showPic(this); return false;" title="D fore">Fore</a></li>
+<li><a href="images/five.jpg" onclick="showPic(this); return false;" title="E five">Five</a></li>
+<img id="placeholder" src="images/4111699389001164920.png" alt="my image gallery" />
+</ul>
+<script type="text/javascript" src="script/showPic.js"></script>
 </body>
 </html>
