--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <li><a href="images/five.jpg" onclick="showPic(this); return false;" title="E five">Five</a></li>
 <img id="placeholder" src="images/4111699389001164920.png" alt="my image gallery" />
 </ul>
-<script type="text/javascript" src="script/showPic.js"></script>
+<script type="text/javascript" src="scripts/showPic.js"></script>
 </body>
 </html>
