--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <h1>Snapshots</h1>
 <ul>
 <li><a href="images/one.jpg" onclick="showPic(this); return false;" title="A one">One</a></li>
-<li><a href="images/two.jpg" onclick="showPic(this); return false;" title="B two">Two</a></li>
+<li><a href="images/two.png" onclick="showPic(this); return false;" title="B two">Two</a></li>
 <li><a href="images/three.jpg" onclick="showPic(this); return false;" title="C three">Three</a></li>
 <li><a href="images/fore.jpg" onclick="showPic(this); return false;" title="D fore">Fore</a></li>
 <li><a href="images/five.jpg" onclick="showPic(this); return false;" title="E five">Five</a></li>
-<img id="placeholder" src="images/4111699389001164920.png" alt="my image gallery" />
+<img id="placeholder" src="images/2222.png" alt="my image gallery" />
 </ul>
 <script type="text/javascript" src="scripts/showPic.js"></script>
 </body>
