--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>       
 <h1>Snapshots</h1>
+<h2><a href="read.html">编码的奥秘</a></h2>
 <ul>
 <li><a href="images/one.jpg" onclick="showPic(this); return false;" title="A one">One</a></li>
 <li><a href="images/two.png" onclick="showPic(this); return false;" title="B two">Two</a></li>
