--- a/index.html
+++ b/index.html
@@ -2,29 +2,44 @@
 <html>
 <head>
 	<meta charset=utf-8" />
-	<title>hello world!</title>
-	<style type="text/css">
-		body{
-			background-color:white;
-		}
-		#myelement{
-			position:absolute;
-			left:50px;
-			top:150px;
-		}
-	</style>
+	<title>闫文超</title>
+	
 </head>
 <body>       
-<h1>Snapshots</h1>
-<h2><a href="read.html">编码的奥秘</a></h2>
-<ul>
-<li><a href="images/one.jpg" onclick="showPic(this); return false;" title="A one">One</a></li>
-<li><a href="images/two.png" onclick="showPic(this); return false;" title="B two">Two</a></li>
-<li><a href="images/three.jpg" onclick="showPic(this); return false;" title="C three">Three</a></li>
-<li><a href="images/fore.jpg" onclick="showPic(this); return false;" title="D fore">Fore</a></li>
-<li><a href="images/five.jpg" onclick="showPic(this); return false;" title="E five">Five</a></li>
-<img id="placeholder" src="images/2222.png" alt="my image gallery" />
-</ul>
-<script type="text/javascript" src="scripts/showPic.js"></script>
+<h1>闫文超</h1>
+<dl>
+	<dt>Email</dt>
+	<dd><a target = "_balank" href="mailto:yanwenchao5211@163.com">yanwenchao5211@163.com</a></dd>
+	<dt>Phone</dt>
+	<dd>18703395993</dd>
+	<dt>Birthday</dt>
+	<dd>1993.09.03</dd>
+	<dt>Work Experience</dt>
+	<dd>
+		<ol>
+			<li>2015.1-2015.8  <a href="http://buygaga.com/">北京嘎嘎时代科技有限公司</a></li>
+
+		</ol>		
+	</dd>
+	<dt>Social</dt>
+	<dd>
+		<ol>
+			<li><a href="http://www.cnblogs.com/DynamicER/">技术博客</a></li>
+			<li><a href="https://github.com/coding5211">Github</a></li>
+			<li><a href="http://www.zhihu.com/people/wan-li-a">知乎</a></li>
+			<li><a href="http://www.douban.com/people/115921888/">豆瓣</a></li>
+			
+		</ol>
+
+	</dd>
+	<dt>Demos</dt>
+	<dd>
+		<ul>
+			<li><a href="demo1.html">Demo1</a></li>
+		</ul>
+	</dd>
+</dl>
+<hr>
+<footer>&copy;闫文超 2105</footer>
 </body>
 </html>
