--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<dt>Demos</dt>
 	<dd>
 		<ul>
+			<li><a href="NETEASE-Web-Homework.html">网易前端微专业大作业</a></li>
 			<li><a href="demo1.html">Demo1</a></li>
 		</ul>
 	</dd>
