--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<dd>
 		<ol>
 			<li>2015.1-2015.8  <a href="http://buygaga.com/">北京嘎嘎时代科技有限公司</a></li>
+			<li>产品专员</li>
+			<li>协助产品经理了解用户需求，编写需求说明，并协调产品的研发、测试等工作。</li>
 
 		</ol>		
 	</dd>
