--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 	<dt>Work Experience</dt>
 	<dd>
 		<ul>
-			<li>2015.1-2015.8  <a href="http://buygaga.com/">北京嘎嘎时代科技有限公司</a></li>
-			<li>产品专员</li>
-			<li>协助产品经理了解用户需求，编写需求说明，并协调产品的研发、测试等工作。</li>
+			<li>2015.1-2015.8  <a href="http://buygaga.com/">北京嘎嘎时代科技有限公司</a> 产品专员</li>
+			<li>工作职责：协助产品经理了解用户需求，编写需求说明，并协调产品的研发、测试等工作。</li>
 
 		</ul>		
 	</dd>
