--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ var _hmt = _hmt || [];
 
 </head>
 <body>
+	<audio autoplay="autoplay" height="100" width"100>
+		<source src = "music/musi.mp3" type="audio/mp3"/>
+	</audio>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
