--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="#" class="thumbnail">
 					<img src="img/9.jpg" alt="...">
 				</a>
 			</div>
