--- a/index.html
+++ b/index.html
@@ -2,23 +2,18 @@
 <html>
 <head>
 
-	<title>辛璐，你在我眼中是最美</title>
+	<title>www.辛璐.com</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="圣诞礼物" />
 	<meta name="description" content="世界上最美的女人，是辛璐，但是她不喜欢我 ಥ_ಥ " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
+	
 
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+
+
+
 
 
 
@@ -27,6 +22,7 @@ var _hmt = _hmt || [];
 	<audio autoplay="autoplay" height="100" width"100>
 		<source src = "music/musi.mp3" type="audio/mp3"/>
 	</audio>
+	
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
@@ -48,7 +44,7 @@ var _hmt = _hmt || [];
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="#" class="thumbnail">
-					<img src="img/4.jpg" alt="...">
+					<img src="img/9.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
@@ -58,11 +54,16 @@ var _hmt = _hmt || [];
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="#" class="thumbnail">
-					<img src="img/6.jpg" alt="...">
+					<img src="img/4.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
+			<div class="col-xs-4 col-md-4">
+				<a href="#" class="thumbnail">
+					<img src="img/8.jpg" alt="...">
+				</a>
+			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="#" class="thumbnail">
 					<img src="img/7.jpg" alt="...">
@@ -70,16 +71,45 @@ var _hmt = _hmt || [];
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="#" class="thumbnail">
-					<img src="img/8.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
-					<img src="img/9.jpg" alt="...">
+					<img src="img/6.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 	</div>
+	<div style="text-align:center;">
+	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:center; font-size:20px;" />
+	</div>
+<script type="text/javascript">
 
+
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+
+
+
+	function addzero(num){
+	 if(num<10)num="0"+num;
+ 		return num;
+		}
+function date(){
+ var spfst= new Date(2016,10,20);
+ //spfst.setFullYear(2016,10,20);//获取结束时间
+ var time=new Date();//获取当前时间
+ var left=spfst.getTime()-time.getTime();
+ //获取两时间差,这个时间的差值是毫秒，所以下面需要将毫秒进行转化，转化成所需要的月、天、时、分、秒
+ var a=Math.floor(left/(24*3600*1000));
+ var b=addzero(Math.floor((left%(24*3600*1000))/(3600*1000)));
+ var c=addzero(Math.floor(((left%(24*3600*1000))%(3600*1000))/(60*1000)));
+ var x=addzero(Math.floor(((left%(24*3600*1000))%(3600*1000)%(60*1000))/1000));
+ document.getElementById("nowtime").value=(a+"天"+b+"时"+c+"分"+x+"秒");
+}
+date()
+setInterval("date()",320)
+</script>
 </body>
 </html>
