--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 		</div>
 	</div>
-	<div style="display:table-cell; vertical-align: middle;	text-align: center;">
+	<div style="text-align:right;">
 	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:right; font-size:18px;" />
 	</div>
 <script type="text/javascript">
