--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
 		</div>
 	</div>
-	<div style="text-align:right;">
-	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:right; font-size:18px;" />
+	<div style="text-align:left;">
+	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:left; font-size:18px;" />
 	</div>
 <script type="text/javascript">
 
