--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div style="text-align:left;">
-	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:left; font-size:18px;" />
+	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:left; font-size:15px; font-family:`楷体`,Georgia,serif;" />
 	</div>
 	<audio autoplay="autoplay" height="100" width"100>
 		<source src = "music/musi.mp3" type="audio/mp3"/>
