--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 
-	<title>www.辛璐.com</title>
+	<title>辛璐，对不起</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="圣诞礼物" />
+	<meta name="keywords" content="" />
 	<meta name="description" content="世界上最美的女人，是辛璐，但是她不喜欢我 ಥ_ಥ " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -23,7 +23,7 @@
 	<input id="nowtime" type="text" readonly="readonly" style="border:none;  line-height:36px; height:36px; width:600px; text-align:left; font-size:15px; font-family:`楷体`,Georgia,serif;" />
 	</div>-->
 	<audio autoplay="autoplay" height="100" width"100>
-		<source src = "music/musi.mp3" type="audio/mp3"/>
+		<source src = "music/musci.mp3" type="audio/mp3"/>
 	</audio>
 	
 	<div class="container">
@@ -82,7 +82,11 @@
 	</div>
 	
 <script type="text/javascript">
-
+alert("对不起");
+alert("我或许特别蠢，但是请相信我，我并不是有意的");
+alert("因为我的一时冲动，令我做出一生中最愚蠢的事情，现在我很想很想跟你说声对不起");
+alert("你认为我需要多练练手");
+alert("可是我想说她们都不如你，我又如何下的去手");
 
 var _hmt = _hmt || [];
 (function() {
@@ -112,6 +116,7 @@ function date(){
 }
 date()
 setInterval("date()",320)
+
 </script>
 </body>
 </html>
