--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
 
 		</div>
 	</div>
-	
+	<p>辛璐，对不起</p>
+	<p>我或许特别蠢，但是请相信我，我并不是有意的</p>
+	<p>因为我的一时冲动，令我做出一生中最愚蠢的事情</p>
+	<p>现在我很想很想跟你说声对不起</p>
+	<p>你认为我需要多练练手</p>
+	<p>可是我想说她们都不如你，我又如何下的去手</p>
 <script type="text/javascript">
-alert("对不起");
-alert("我或许特别蠢，但是请相信我，我并不是有意的");
-alert("因为我的一时冲动，令我做出一生中最愚蠢的事情，现在我很想很想跟你说声对不起");
-alert("你认为我需要多练练手");
-alert("可是我想说她们都不如你，我又如何下的去手");
+
 
 var _hmt = _hmt || [];
 (function() {
