--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 	<p>你认为我需要多练练手</p>
 	<p>可是我想说她们都不如你，我又如何下的去手</p>
 <script type="text/javascript">
-
+document.addEventListener('touchstart', function(){
+   audio.play();
+}, false);
 
 var _hmt = _hmt || [];
 (function() {
