--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<dt>Work Experience</dt>
 	<dd>
 		<ol>
-			<li>2015.1-2015.8  <a href="http://buygaga.com/">北京嘎嘎时代科技有限公司</a></li>
+			<li>2015.1-2016.5  <a href="#">北京嘎嘎时代科技有限公司</a></li>
+			<li>2016.5-至今<a href="#">北京合世阳光科技有限公司</a></li>
 
 		</ol>		
 	</dd>
@@ -36,11 +37,11 @@
 	<dd>
 		<ul>
 			<li><a href="NETEASE-Web-Homework.html">网易前端微专业大作业</a></li>
-			<li><a href="demo1.html">Demo1</a></li>
+			
 		</ul>
 	</dd>
 </dl>
 <hr>
-<footer>&copy;闫文超 2105</footer>
+<footer>&copy;闫文超 2017</footer>
 </body>
 </html>
