--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="section section1" id="section1">
     <div class="section overlay">
         <img class="hvd" src="img/hvd.svg" width="85%" alt="" id="hvd"/>
-        <p class="bigTile" id="title">For my honey</p>
+        <p class="bigTile" id="title"></p>
     </div>
 </div>
 <div class="section flexRow" id="section2">
