--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>于晓杰</title>
-<!--<meta name="description" content="于晓杰">-->
+<title>祝各位CTO顺利脱单</title>
+<!--<meta name="description" content="祝各位CTO顺利脱单">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" href="img/hvd.svg">
 <link rel="stylesheet" href="bundle/app.css">
